开发过程文档更新（部署成功了）

--- a/数据库项目开发过程文档.md
+++ b/数据库项目开发过程文档.md
@@ -536,7 +536,7 @@ path("getSalesData", views.getSalesData)
 ### 3、Vue3+Django4项目整合
 参考博客：<br />vue+django的项目部署问题：<br />[https://blog.csdn.net/qq_44774831/article/details/116495456?ops_request_misc=&request_id=&biz_id=102&utm_term=Vue3+Django4%E9%A1%B9%E7%9B%AE%E6%95%B4%E5%90%88%EF%BC%8C%E6%8E%A5%E5%8F%A3%E9%97%AE%E9%A2%98&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-116495456.142^v67^control,201^v3^control,213^v2^t3_esquery_v3&spm=1018.2226.3001.4187](https://blog.csdn.net/qq_44774831/article/details/116495456?ops_request_misc=&request_id=&biz_id=102&utm_term=Vue3+Django4%E9%A1%B9%E7%9B%AE%E6%95%B4%E5%90%88%EF%BC%8C%E6%8E%A5%E5%8F%A3%E9%97%AE%E9%A2%98&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-116495456.142^v67^control,201^v3^control,213^v2^t3_esquery_v3&spm=1018.2226.3001.4187)<br />Vue3+Django4项目整合：<br />[https://blog.csdn.net/a820206256/article/details/127835009?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EAD_ESQUERY%7Eyljh-1-127835009-blog-109407968.pc_relevant_3mothn_strategy_and_data_recovery&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EAD_ESQUERY%7Eyljh-1-127835009-blog-109407968.pc_relevant_3mothn_strategy_and_data_recovery&utm_relevant_index=2](https://blog.csdn.net/a820206256/article/details/127835009?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EAD_ESQUERY%7Eyljh-1-127835009-blog-109407968.pc_relevant_3mothn_strategy_and_data_recovery&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EAD_ESQUERY%7Eyljh-1-127835009-blog-109407968.pc_relevant_3mothn_strategy_and_data_recovery&utm_relevant_index=2)<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670142147397-cb4987d4-8c3c-42d5-8ed5-e473f74978f9.png#averageHue=%233e4247&clientId=u70f124f1-2894-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=475&id=u8842a40b&margin=%5Bobject%20Object%5D&name=image.png&originHeight=722&originWidth=324&originalType=binary&ratio=1&rotation=0&showTitle=false&size=25923&status=done&style=none&taskId=ud923cb7b-cecd-4353-8d8a-dca856746cb&title=&width=213)
 <a name="ijC47"></a>
-## 十、项目部署（未部署成功。。。）
+## 十、项目部署
 将数据库导出为sql文件：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670158954555-4d104105-ab06-464c-802d-df7812264cb7.png#averageHue=%232e2e2e&clientId=u2c952dd3-1e85-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=229&id=ua1caa5c2&margin=%5Bobject%20Object%5D&name=image.png&originHeight=229&originWidth=960&originalType=binary&ratio=1&rotation=0&showTitle=false&size=8791&status=done&style=none&taskId=ud01801e8-b621-4e78-9946-a14443f6c79&title=&width=960)<br />部署参考博客：（记得python项目管理器一定要用1.9版本的）<br />[https://zhuanlan.zhihu.com/p/476724776](https://zhuanlan.zhihu.com/p/476724776)<br />宝塔终端中用到的命令：
 ```javascript
 //进入虚拟环境
@@ -547,3 +547,5 @@ cd /www/wwwroot/82.157.247.180
 python manage.py runserver
 ```
 最终仍失败（数据库连接出了问题）。。。目前不知道怎么解决。
+
+之后按照这篇博客[https://blog.csdn.net/u010775335/article/details/124176358](https://blog.csdn.net/u010775335/article/details/124176358)解决了数据库连接的问题，（本质是在终端新建一个数据库）。<br />python manage.py runserver命令之后没有报错，但是浏览器访问ip地址报下面的错：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670941540461-645b043c-3c33-4a09-a847-61bd2f1f308e.png#averageHue=%23efeeee&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=131&id=uc0239d76&margin=%5Bobject%20Object%5D&name=image.png&originHeight=196&originWidth=508&originalType=binary&ratio=1&rotation=0&showTitle=false&size=10196&status=done&style=none&taskId=ufe20d9ba-a5d6-4a3c-8b8a-38ddc248b71&title=&width=338.6666666666667)<br />之后更改鼠标所选部分ip（更改为127.0.0.1，在python项目管理器重启项目）<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670942892682-6e010bde-3cc9-476a-ab7d-55f91be2c373.png#averageHue=%23f7f7f7&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=280&id=u551eac21&margin=%5Bobject%20Object%5D&name=image.png&originHeight=846&originWidth=1168&originalType=binary&ratio=1&rotation=0&showTitle=false&size=117793&status=done&style=none&taskId=u6231339d-b25b-4467-b6e9-d223b0fac97&title=&width=386)![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670942927709-5bfa916a-f980-4e3a-ba54-0db3bcf3a05a.png#averageHue=%2340403d&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=247&id=ubb690b39&margin=%5Bobject%20Object%5D&name=image.png&originHeight=609&originWidth=1318&originalType=binary&ratio=1&rotation=0&showTitle=false&size=142280&status=done&style=none&taskId=u15b357d4-64c4-4f45-bcba-34d06c4c845&title=&width=534)<br />此时访问成功。<br />但是发现，这种问题：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670943214637-92e36603-4cbf-4c8c-a894-04cab098a6b0.png#averageHue=%23fdf5f5&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=67&id=ucad985bc&margin=%5Bobject%20Object%5D&name=image.png&originHeight=100&originWidth=849&originalType=binary&ratio=1&rotation=0&showTitle=false&size=6505&status=done&style=none&taskId=u5a29b059-74d5-4c8a-88bf-539b7b32bcf&title=&width=566)<br />解决办法：更改前端请求的根路由。<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670944360353-46b30dc0-ecbb-4b21-9eca-d6d2436087e1.png#averageHue=%23201f1f&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=201&id=u5320c5c5&margin=%5Bobject%20Object%5D&name=image.png&originHeight=369&originWidth=1135&originalType=binary&ratio=1&rotation=0&showTitle=false&size=63363&status=done&style=none&taskId=u002bd2da-6d74-4965-bf15-3ab3e711931&title=&width=617)<br />此时访问成功，但Redis部分出错，导致登录后无法获取登录信息：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670945021500-93d0a6b4-0998-4b3c-9fe7-42a352fa1f33.png#averageHue=%23f9f8f8&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=299&id=u12e457ad&margin=%5Bobject%20Object%5D&name=image.png&originHeight=898&originWidth=1920&originalType=binary&ratio=1&rotation=0&showTitle=false&size=133705&status=done&style=none&taskId=ua4c8cdf4-9466-4862-9334-d907e4a10e9&title=&width=640)<br />此时查看登录接口的响应头，发现cookie没有被设置上：<br />![05844719b83ba97867ea416627a2158.jpg](https://cdn.nlark.com/yuque/0/2022/jpeg/27865087/1670945776665-3331da08-8414-4275-bd8e-f3362c425853.jpeg#averageHue=%23b0afb2&clientId=u8ac537c4-e8a5-4&crop=0&crop=0.3881&crop=1&crop=0.7364&from=paste&height=273&id=u2ad2d2e2&margin=%5Bobject%20Object%5D&name=05844719b83ba97867ea416627a2158.jpg&originHeight=1280&originWidth=2770&originalType=binary&ratio=1&rotation=0&showTitle=false&size=378098&status=done&style=none&taskId=ua3d937a2-0092-4e29-9bf7-bbae06497be&title=&width=591)<br />解决办法：![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670945863135-d58107df-b55b-483f-a379-c7a0deb39d02.png#averageHue=%2335362f&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=65&id=ue16cff0a&margin=%5Bobject%20Object%5D&name=image.png&originHeight=97&originWidth=499&originalType=binary&ratio=1&rotation=0&showTitle=false&size=19003&status=done&style=none&taskId=uba3a5a1f-5b16-4dc0-b150-c6dbe8b67c5&title=&width=332.6666666666667)（将SESSION_COOKIE_SECURE设置为Flase，否则只能通过https访问了。）<br />此时仍然没有设置上cookie：<br />![919ed480d09693a0ed7140edf738de1.jpg](https://cdn.nlark.com/yuque/0/2022/jpeg/27865087/1670946032898-0a4306fd-8673-4504-aec7-6a2be16f1a94.jpeg#averageHue=%23b6b5b8&clientId=u8ac537c4-e8a5-4&crop=0&crop=0.5773&crop=1&crop=0.8463&from=paste&height=853&id=ua0136291&margin=%5Bobject%20Object%5D&name=919ed480d09693a0ed7140edf738de1.jpg&originHeight=1280&originWidth=2770&originalType=binary&ratio=1&rotation=0&showTitle=false&size=351177&status=done&style=none&taskId=u7f600753-4142-4480-a39c-41e01f5305d&title=&width=1847)<br />此时解决方案：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670946538394-dd08be5b-ad56-4ad9-b2d5-fc5e490d1bb6.png#averageHue=%232d2e27&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=65&id=ua1d8c976&margin=%5Bobject%20Object%5D&name=image.png&originHeight=97&originWidth=484&originalType=binary&ratio=1&rotation=0&showTitle=false&size=17068&status=done&style=none&taskId=u87a61185-6e4b-4374-91c0-271be728c39&title=&width=322.6666666666667)（即注释掉）<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670946648740-56dc1309-4cd9-443d-b645-840a447c8cb5.png#averageHue=%23dcba7d&clientId=u8ac537c4-e8a5-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=626&id=u868189bf&margin=%5Bobject%20Object%5D&name=image.png&originHeight=939&originWidth=1920&originalType=binary&ratio=1&rotation=0&showTitle=false&size=193067&status=done&style=none&taskId=u5927f841-3379-4f87-952f-fe1151276c9&title=&width=1280)<br />部署成功。<br />此时若想用已备案已解析的域名进行访问，则在网站-域名管理里面增加域名即可：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670990457904-8ef5ba72-546a-4089-8547-1da57290f5c2.png#averageHue=%23a7804a&clientId=u672f658a-3e61-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=285&id=u3623c33e&margin=%5Bobject%20Object%5D&name=image.png&originHeight=778&originWidth=1776&originalType=binary&ratio=1&rotation=0&showTitle=false&size=130057&status=done&style=none&taskId=u3a3b6836-10f2-49f3-8c12-bc8541d880a&title=&width=650)<br />此时发现新的问题，cookie没有设置上：<br />![92f5a84d50af7d7ef3251fdb3b6be6d.jpg](https://cdn.nlark.com/yuque/0/2022/jpeg/27865087/1670990666656-a5643690-9226-41fe-b694-4b645bad31a4.jpeg#averageHue=%23b4b8b6&clientId=u672f658a-3e61-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=266&id=u9dc786e9&margin=%5Bobject%20Object%5D&name=92f5a84d50af7d7ef3251fdb3b6be6d.jpg&originHeight=1280&originWidth=2770&originalType=binary&ratio=1&rotation=0&showTitle=false&size=326674&status=done&style=none&taskId=ua72ae6b0-17c7-4727-a65d-3c00bb6648a&title=&width=576)<br />此时解决方案：部署ssl证书：（腾讯云申请的免费ssl证书）<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670995636057-92aac6ac-7904-48ed-a733-2ab4b8ae00d0.png#averageHue=%23dec090&clientId=u672f658a-3e61-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=571&id=u9c59b190&margin=%5Bobject%20Object%5D&name=image.png&originHeight=856&originWidth=1177&originalType=binary&ratio=1&rotation=0&showTitle=false&size=120359&status=done&style=none&taskId=ubc231425-3176-402d-af84-ff6b3b95fbc&title=&width=784.6666666666666)<br />此时无法发起请求：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670996301497-326512e9-7a9d-4768-b3a8-055e8d13f5eb.png#averageHue=%23767b78&clientId=u672f658a-3e61-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=290&id=u73061774&margin=%5Bobject%20Object%5D&name=image.png&originHeight=654&originWidth=1462&originalType=binary&ratio=1&rotation=0&showTitle=false&size=1016866&status=done&style=none&taskId=ub44c7757-2214-4cbb-8b46-81537e164bd&title=&width=648)<br />此时参考了这两篇博客：<br />[https://blog.csdn.net/Happy_EndNow/article/details/112637618?ops_request_misc=&request_id=&biz_id=102&utm_term=django%E9%A1%B9%E7%9B%AE%E9%85%8D%E7%BD%AE%E4%BA%86ssl%E8%AF%81%E4%B9%A6%E5%90%8E%EF%BC%8C%E5%89%8D%E7%AB%AF%E6%8E%A5%E5%8F%A3%E4%B8%8D%E9%80%9A&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-3-112637618.142^v68^control,201^v4^add_ask,213^v2^t3_esquery_v3&spm=1018.2226.3001.4187](https://blog.csdn.net/Happy_EndNow/article/details/112637618?ops_request_misc=&request_id=&biz_id=102&utm_term=django%E9%A1%B9%E7%9B%AE%E9%85%8D%E7%BD%AE%E4%BA%86ssl%E8%AF%81%E4%B9%A6%E5%90%8E%EF%BC%8C%E5%89%8D%E7%AB%AF%E6%8E%A5%E5%8F%A3%E4%B8%8D%E9%80%9A&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-3-112637618.142^v68^control,201^v4^add_ask,213^v2^t3_esquery_v3&spm=1018.2226.3001.4187)<br />[https://blog.csdn.net/hzw6991/article/details/103800677?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522167099784516782395350777%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&request_id=167099784516782395350777&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-4-103800677-null-null.142^v68^control,201^v4^add_ask,213^v2^t3_esquery_v3&utm_term=django%E9%A1%B9%E7%9B%AE%E9%85%8D%E7%BD%AE%E4%BA%86ssl%E8%AF%81%E4%B9%A6%E5%90%8E%EF%BC%8C%E5%89%8D%E7%AB%AF%E6%8E%A5%E5%8F%A3%E4%B8%8D%E9%80%9A&spm=1018.2226.3001.4187](https://blog.csdn.net/hzw6991/article/details/103800677?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522167099784516782395350777%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&request_id=167099784516782395350777&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-4-103800677-null-null.142^v68^control,201^v4^add_ask,213^v2^t3_esquery_v3&utm_term=django%E9%A1%B9%E7%9B%AE%E9%85%8D%E7%BD%AE%E4%BA%86ssl%E8%AF%81%E4%B9%A6%E5%90%8E%EF%BC%8C%E5%89%8D%E7%AB%AF%E6%8E%A5%E5%8F%A3%E4%B8%8D%E9%80%9A&spm=1018.2226.3001.4187)<br />仍没有用。。。<br />最后，改变前端请求跟路由即可：<br />![image.png](https://cdn.nlark.com/yuque/0/2022/png/27865087/1670999056218-0675355a-c995-4264-9d44-7d509611e41c.png#averageHue=%231f1e1e&clientId=ue7d88d2d-d9af-4&crop=0&crop=0&crop=1&crop=1&from=paste&height=178&id=uab09833b&margin=%5Bobject%20Object%5D&name=image.png&originHeight=267&originWidth=982&originalType=binary&ratio=1&rotation=0&showTitle=false&size=57740&status=done&style=none&taskId=u35ad8338-e57e-4d3f-a5b1-e0b8986a7a6&title=&width=654.6666666666666)<br />项目链接：[https://www.anlh.xyz/](https://www.anlh.xyz/)<br />nice！
